Update and rename success.yml to success.yaml

--- a/.github/ISSUE_TEMPLATE/success.yaml
+++ b/.github/ISSUE_TEMPLATE/success.yaml
@@ -1,5 +1,5 @@
 name: "Expression of support"
-fields:
+body:
 - type: "markdown"
   attributes:
     value: "# Expression of Support\nFill out this form if you support the **Cross-Origin Storage (COS) API** proposal and would possibly make use of it in your apps."
