--- a/.github/ISSUE_TEMPLATE/success.yaml
+++ b/.github/ISSUE_TEMPLATE/success.yaml
@@ -4,9 +4,9 @@ body:
   - type: "markdown"
     attributes:
       value: |
-        "# Expression of Support"
+        "# Expression of Support
         Fill out this form if you support the **Cross-Origin Storage (COS) API**
-        proposal and would possibly make use of it in your apps.
+        proposal and would possibly make use of it in your apps."
   - type: "checkboxes"
     attributes:
       label: "What is the primary use case for this API in your apps?"
