--- a/.github/ISSUE_TEMPLATE/success.yaml
+++ b/.github/ISSUE_TEMPLATE/success.yaml
@@ -1,4 +1,5 @@
 name: "Expression of support"
+title: "[Expression of support]: "
 description: "Express your support for the Cross-Origin Storage API Proposal"
 body:
   - type: "markdown"
@@ -51,7 +52,7 @@ body:
       required: false
   - type: "textarea"
     attributes:
-      label: "Other feedback"
+      label: "Any other feedback"
       description: "Is there anything else you want the team to know?"
     validations:
       required: false
