--- a/.github/ISSUE_TEMPLATE/success.yaml
+++ b/.github/ISSUE_TEMPLATE/success.yaml
@@ -1,4 +1,4 @@
-name: "Expression of support"
+name: "Expresssdsdion of support"
 description: "Express your support for the Cross-Origin Storage API Proposal."
 title: "[Expression of support]: "
 labels: ["expression-of-support"]
