--- a/.github/ISSUE_TEMPLATE/success.yaml
+++ b/.github/ISSUE_TEMPLATE/success.yaml
@@ -1,7 +1,7 @@
 name: "Expresssdsdion of support"
-description: "Express your support for the Cross-Origin Storage API Proposal."
 title: "[Expression of support]: "
-labels: ["expression-of-support"]
+description: "Express your support for the Cross-Origin Storage API Proposal."
+labels: ["bug"]
 body:
   - type: "markdown"
     attributes:
